--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     	Het ontwerpen van een mobiele applicatie in opdracht van KPN
 		</p>
 
-		<img src="images/kpn/kpnmockup.png" class="kpnimage">
+		<img src="kpnmockup.png" class="kpnimage">
 
     </div>
 	</a>
@@ -183,7 +183,7 @@
     	Het doorlopen van mijn stage bij de webshop Oot Granola
     	</p>
 
-    	<img src="images/oot/ootmockuplaptop2.png" class="ootimage">
+    	<img src="ootmockuplaptop2.png" class="ootimage">
 
     </div>
 	</a>
@@ -195,7 +195,7 @@
     	Een nieuw ontwerp ontwikkelen voor een mobiele Hanze app
 		</p>
 
-		<img src="images/hanze/mockupHanzeapp.png" class="hanzeimage">
+		<img src="mockupHanzeapp.png" class="hanzeimage">
 
     </div> 
 	</a>
@@ -207,7 +207,7 @@
     	Een nieuw ontwerp ontwikkelen voor een mobiele Hanze app
 		</p>
 
-		<img src="images/bedrijf/mockupbedrijf.png" class="bedrijfimage">
+		<img src="mockupbedrijf.png" class="bedrijfimage">
 
     </div>
 	</a>
@@ -220,7 +220,7 @@
 		</p>
 
 		<div style="width: 375px; display: flex; justify-content: center; margin-left: -50px; z-index: 2;">
-			<img src="images/fabriek/fabriekachtergrond.png" class="fabriekimage">
+			<img src="fabriekachtergrond.png" class="fabriekimage">
 		</div>
 
     </div>
@@ -235,7 +235,7 @@
 		</p>
 
 		<div style="width: 100%; display: flex; justify-content: center;">
-			<img src="images/solar/solarvrmockup.png" class="solarimage">
+			<img src="solarvrmockup.png" class="solarimage">
 		</div>
 
     </div>
