--- a/KPN.html
+++ b/KPN.html
@@ -34,10 +34,6 @@
 
 <body style="background-image: linear-gradient(to right top, #fdffc3, #fefec9, #fffed0, #fffdd6, #fffddd); margin-bottom: 150px;">
 
-<div class="backbutton">
-	<i class="far fa-arrow-alt-circle-left fa-2x"></i>
-</div>
-
 
 	<div style="height: 70vh; display: flex; justify-content: center;  align-items: center;">
 		
@@ -73,7 +69,7 @@
 	</p>
     </div>
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/kpn/kpnimage2.png" class="kpnimage">
+      <img src="kpnimage2.png" class="kpnimage">
     </div>
   </div>
 </div> 
@@ -86,7 +82,7 @@
 
 
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/kpn/kpnimage3.png" class="kpnimage">
+      <img src="kpnimage3.png" class="kpnimage">
     </div>
 
     <div class="col-md-6" style="display: flex; align-items: center;">
@@ -121,7 +117,7 @@
 
 
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/kpn/kpnimage3.png" class="kpnimage">
+      <img src="kpnimage3.png" class="kpnimage">
     </div>
 
   </div>
