--- a/bedrijf.html
+++ b/bedrijf.html
@@ -66,7 +66,7 @@
 	</p>
     </div>
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/bedrijf/mockupbedrijf2.png" class="bedrijflaptop">
+      <img src="mockupbedrijf2.png" class="bedrijflaptop">
     </div>
   </div>
 </div> 
@@ -79,7 +79,7 @@
 
 
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/bedrijf/mockupbedrijf.png" class="bedrijflaptop">
+      <img src="mockupbedrijf.png" class="bedrijflaptop">
     </div>
 
     <div class="col-md-6" style="display: flex; align-items: center;">
@@ -106,7 +106,7 @@
 
 
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/bedrijf/mockupbedrijf.png" class="bedrijflaptop">
+      <img src="mockupbedrijf.png" class="bedrijflaptop">
     </div>
 
   </div>
