--- a/hanze.html
+++ b/hanze.html
@@ -63,7 +63,7 @@
 	</p>
     </div>
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/hanze/mockupHanzeapp.png" class="kpnimage">
+      <img src="mockupHanzeapp.png" class="kpnimage">
     </div>
   </div>
 </div> 
@@ -76,7 +76,7 @@
 
 
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/hanze/mockupHanzeapp2.png" class="kpnimage">
+      <img src="mockupHanzeapp2.png" class="kpnimage">
     </div>
 
     <div class="col-md-6" style="display: flex; align-items: center;">
@@ -103,7 +103,7 @@
 
 
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/hanze/mockupHanzeapp2.png" class="kpnimage">
+      <img src="mockupHanzeapp2.png" class="kpnimage">
     </div>
 
   </div>
