--- a/oot.html
+++ b/oot.html
@@ -68,7 +68,7 @@
 	</p>
     </div>
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/oot/Ootmockup.png" class="kpnimage">
+      <img src="Ootmockup.png" class="kpnimage">
     </div>
   </div>
 </div> 
@@ -81,7 +81,7 @@
 
 
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/oot/ootmockuplaptop.png" class="ootlaptop">
+      <img src="ootmockuplaptop.png" class="ootlaptop">
     </div>
 
     <div class="col-md-6" style="display: flex; align-items: center;">
@@ -112,7 +112,7 @@
 
 
     <div class="col col-md-6" style="text-align: center; margin-top: 35px;">
-      <img src="images/oot/ootmockuplaptop.png" class="ootlaptop">
+      <img src="ootmockuplaptop.png" class="ootlaptop">
     </div>
 
   </div>
