--- a/solervr.html
+++ b/solervr.html
@@ -63,7 +63,7 @@
 	</p>
     </div>
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/solar/solarvrmockup.png" class="bedrijflaptop">
+      <img src="solarvrmockup.png" class="bedrijflaptop">
     </div>
   </div>
 </div> 
@@ -76,7 +76,7 @@
 
 
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/solar/solarvrmockup.png" class="bedrijflaptop">
+      <img src="solarvrmockup.png" class="bedrijflaptop">
     </div>
 
     <div class="col-md-6" style="display: flex; align-items: center;">
@@ -102,7 +102,7 @@
 
 
     <div class="col col-md-6" style="text-align: center;">
-      <img src="images/solar/solarvrmockup.png" class="bedrijflaptop">
+      <img src="solarvrmockup.png" class="bedrijflaptop">
     </div>
 
   </div>
