--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 		<!--	overig	-->
 		<link href="style.css" rel="stylesheet">
 		<script src="javascript.js"></script>
-
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- ScrollMagic -->
@@ -21,6 +20,11 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 
 </head>
 
@@ -149,7 +153,7 @@
     	<div class="toptekst" style="margin-left: 0px; margin-bottom: 150px; text-align: center;">
 
 			<div class="col" style="padding: 0;">
-				<h2 style="margin: 0; font-size: 20px;">Hi, my name is Mark van de Pol</h2>
+				<h2 style="margin: 0; font-size: 20px;">Hi, my name is Mark van de Poll</h2>
 				<h2 style="margin: 0; font-size: 20px;">Front-end web developer</h2>
 
 
