--- a/fabriek.html
+++ b/fabriek.html
@@ -87,7 +87,7 @@
     <div class="col-md-6" style="display: flex; align-items: center;">
       	<p class="kpntext2">
 		<span style="font-weight: bold; line-height: 40px;">Wat heb ik geleerd</span><br>
-    Dankzij dit project heb stappen gemaakt in HTML, CSS en een klein beetje Javascript. 
+    Dankzij dit project heb stappen gemaakt in HTML, CSS en ik heb beginstappen gemaakt in Javascript. 
     Ook heb ik tijdens het uitwerken van de test de basics van Wordpress onder de knie gekregen.
 	</p>
     </div>
@@ -101,7 +101,8 @@
     <div class="col-md-6" style="display: flex; align-items: center;">
       	<p class="kpntext2">
 		<span style="font-weight: bold; line-height: 40px;">Wat heb ik geleerd</span><br>
-
+    Dankzij dit project heb stappen gemaakt in HTML, CSS en ik heb beginstappen gemaakt in Javascript. 
+    Ook heb ik tijdens het uitwerken van de test de basics van Wordpress onder de knie gekregen.
 	</p>
     </div>
 
