--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="slide five">
 
     	<p class="fivetext">
-    	Een nieuw ontwerp ontwikkelen voor een mobiele Hanze app
+    	Het ontwikkelen van een huisstijl en prototype voor Bedrijfkracht
 		</p>
 
 		<img src="mockupbedrijf.png" class="bedrijfimage">
@@ -153,7 +153,7 @@
     	<div class="toptekst" style="margin-left: 0px; margin-bottom: 150px; text-align: center;">
 
 			<div class="col" style="padding: 0;">
-				<h2 style="margin: 0; font-size: 20px;">Hi, my name is Mark van de Poll</h2>
+				<h2 style="margin: 0; font-size: 20px;">Hi, my name is Mark van de Pol</h2>
 				<h2 style="margin: 0; font-size: 20px;">Front-end web developer</h2>
 
 
@@ -208,7 +208,7 @@
     <div class="slide five">
 
     	<p class="fivetext">
-    	Een nieuw ontwerp ontwikkelen voor een mobiele Hanze app
+    	Het ontwikkelen van een huisstijl en prototype voor Bedrijfkracht
 		</p>
 
 		<img src="mockupbedrijf.png" class="bedrijfimage">
