--- a/oot.html
+++ b/oot.html
@@ -75,7 +75,7 @@
 
 </div>
 
-<div style="display: flex; justify-content: center;  align-items: center; margin-top: 75px;" class="fade-in">
+<div style="display: flex; justify-content: center;  align-items: center; margin-top: 75px; margin-bottom: 100px;" class="fade-in">
 <div class="container kpncontentgroot">
   <div class="row justify-content-md-center">
 
